--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vue": "^3.2.31"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-75team": "^1.0.3"
   }
 }
