--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "puppeteer": "^13.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3",
     "vue": "^3.2.31"
   },
   "devDependencies": {
