--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "showcase",
+  "name": "@xitu/showcase",
   "version": "0.0.1",
   "description": "Faster way to render & interact react & vue3 components with command line interface.",
   "main": "index.js",
