--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@xitu/showcase",
+  "name": "jjsc",
   "version": "0.0.1",
   "description": "Faster way to render & interact react & vue3 components with command line interface.",
   "main": "index.js",
   "bin": {
     "showcase": "bin/index.js",
-    "sc": "bin/index.js"
+    "jjsc": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
