--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jjsc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Faster way to render & interact react & vue3 components with command line interface.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "bin": {
     "showcase": "bin/index.js",
     "jjsc": "bin/index.js"
