--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jjsc",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Faster way to render & interact react & vue3 components with command line interface.",
   "main": "lib/index.js",
   "bin": {
@@ -16,6 +16,7 @@
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.1",
     "esbuild": "^0.14.21",
+    "esbuild-plugin-vue-next": "^0.1.4",
     "open": "^8.4.0",
     "puppeteer": "^13.3.0",
     "react": "^17.0.2",
