--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "show-case",
+  "name": "showcase-core",
   "version": "0.1.5",
   "description": "Faster way to render & interact react & vue3 components with command line interface.",
   "main": "lib/index.js",
